--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-  <title>Socket.IO chat</title>
+  <title>Chat RPG</title>
   <style>
     * { margin: 0; padding: 0; box-sizing: border-box; }
     body { font: 13px Helvetica, Arial; }
@@ -16,7 +16,7 @@
 <body>
 <ul id="messages"></ul>
 <form action="">
-  <input id="m" autocomplete="off" /><button>Send</button>
+  <input id="m" autocomplete="off" /><button>Enviar</button>
 </form>
 <script src="https://cdn.socket.io/socket.io-1.2.0.js"></script>
 <script src="http://code.jquery.com/jquery-1.11.1.js"></script>
