--- a/index.html
+++ b/index.html
@@ -25,10 +25,11 @@
 </div>
 
 <script src="https://cdn.socket.io/socket.io-1.2.0.js"></script>
-<script src="http://code.jquery.com/jquery-1.11.1.js"></script>
+<script src="jquery-3.0.0.min.js"></script>
 <script>
   var socket = io();
   $('#send').click(function(){
+    console.log('aqui');
     socket.emit('chat message', $('#msg').val());
     $('#msg').val('');
     return false;
