--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 <div id="bottom">
     <input id="msg" autocomplete="off" /><button id="send">Enviar</button>
-  <img id="roll" src="dice.png" />
+  <img id="roll" src="asset_path('dice.png')" />
 </div>
 
 <script src="https://cdn.socket.io/socket.io-1.2.0.js"></script>
