--- a/index.html
+++ b/index.html
@@ -1,43 +1,32 @@
 <!doctype html>
 <html>
 <head>
-  <title>Chat RPG</title>
+  <title>Socket.IO chat</title>
   <style>
     * { margin: 0; padding: 0; box-sizing: border-box; }
     body { font: 13px Helvetica, Arial; }
+    form { background: #000; padding: 3px; position: fixed; bottom: 0; width: 100%; }
+    form input { border: 0; padding: 10px; width: 90%; margin-right: .5%; }
     form button { width: 9%; background: rgb(130, 224, 255); border: none; padding: 10px; }
     #messages { list-style-type: none; margin: 0; padding: 0; }
     #messages li { padding: 5px 10px; }
     #messages li:nth-child(odd) { background: #eee; }
-    #bottom { background: #000; padding: 3px; position: fixed; bottom: 0; width: 100%; }
-    #bottom {color:#eeeeee;}
-    #msg { border: 0; padding: 10px; width: 80%; margin-right: .5%; }
-    #send { width: 9%; background: rgb(130, 224, 255); border: none; padding: 10px; }
-    #roll { width: 40px; height: 40px; vertical-align: bottom; margin-left: 30px;}
   </style>
 </head>
 <body>
 <ul id="messages"></ul>
-
-<div id="bottom">
-    <input id="msg" autocomplete="off" /><button id="send">Enviar</button>
-  <img id="roll" src="assets/images/dice.png" />
-</div>
-
+<form action="">
+  <input id="m" autocomplete="off" /><button>Send</button>
+</form>
 <script src="https://cdn.socket.io/socket.io-1.2.0.js"></script>
-<script src="jquery-3.0.0.min.js"></script>
+<script src="http://code.jquery.com/jquery-1.11.1.js"></script>
 <script>
   var socket = io();
-  $('#send').click(function(){
-    console.log('aqui');
-    socket.emit('chat message', $('#msg').val());
-    $('#msg').val('');
+  $('form').submit(function(){
+    socket.emit('chat message', $('#m').val());
+    $('#m').val('');
     return false;
-  });/*
-  $('#roll').click(function(){
-    socket.emit('roll message', 'd6');
-    return false;
-  });*/
+  });
   socket.on('chat message', function(msg){
     $('#messages').append($('<li>').text(msg));
   });
