--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
 
 <div id="bottom">
   <input id="msg" autocomplete="off" /><button id="send">Enviar</button>
-  <img id="roll" src="/public/dice.png" />
+  <img id="roll" src="https://db.tt/Upbap5C6" />
 </div>
 
 <script src="https://cdn.socket.io/socket.io-1.2.0.js"></script>
-<script src="jquery-3.0.0.min.js"></script>
+<script src="https://db.tt/Y51sF6iU"></script>
 <script>
   var socket = io();
   $('#send').click(function(){
