--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
    return false;
    });
   socket.on('chat message', function(msg){
-    $('#messages').append($('<li>').text(msg));
+    $('#messages').append($('<li>').html(msg));
   });
 </script>
 </body>
