--- a/index.html
+++ b/index.html
@@ -1,47 +1,29 @@
 <!doctype html>
-<html>
+<!doctype html>
+<html lang="en">
 <head>
-  <title>Chat RPG</title>
-  <style>
-    * { margin: 0; padding: 0; box-sizing: border-box; }
-    body { font: 13px Helvetica, Arial; }
-    form button { width: 9%; background: rgb(130, 224, 255); border: none; padding: 10px; }
-    #messages { list-style-type: none; margin: 0; padding: 0; }
-    #messages li { padding: 5px 10px; }
-    #messages li:nth-child(odd) { background: #eee; }
-    #bottom { background: #000; padding: 3px; position: fixed; bottom: 0; width: 100%; }
-    #bottom {color:#eeeeee;}
-    #msg { border: 0; padding: 10px; width: 80%; margin-right: .5%; }
-    #send { width: 9%; background: rgb(130, 224, 255); border: none; padding: 10px; }
-    #roll { width: 40px; height: 40px; vertical-align: bottom; margin-left: 30px;}
-    .d6-dice-icon {width: 15px; height: 15px;}
-  </style>
+  <meta charset="UTF-8">
+  <title>Chat</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<ul id="messages"></ul>
+<ul class="pages">
+  <li class="chat page">
+    <div class="chatArea">
+      <ul class="messages"></ul>
+    </div>
+    <input class="inputMessage" placeholder="Type here..."/>
+  </li>
+  <li class="login page">
+    <div class="form">
+      <h3 class="title">What's your nickname?</h3>
+      <input class="usernameInput" type="text" maxlength="14" />
+    </div>
+  </li>
+</ul>
 
-<div id="bottom">
-  <input id="msg" autocomplete="off" /><button id="send">Enviar</button>
-  <img id="roll" src="https://db.tt/Upbap5C6" />
-</div>
-
+<script src="https://code.jquery.com/jquery-3.0.0.min.js"></script>
 <script src="https://cdn.socket.io/socket.io-1.2.0.js"></script>
-<script src="https://db.tt/Y51sF6iU"></script>
-<script>
-  var socket = io();
-  $('#send').click(function(){
-    console.log('aqui');
-    socket.emit('chat message', $('#msg').val());
-    $('#msg').val('');
-    return false;
-  });
-   $('#roll').click(function(){
-   socket.emit('roll message', 'd6');
-   return false;
-   });
-  socket.on('chat message', function(msg){
-    $('#messages').append($('<li>').html(msg));
-  });
-</script>
+<script src="/main.js"></script>
 </body>
 </html>
