--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Chat</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://dl.dropboxusercontent.com/u/1725584/chat-rpg/style.css">
 </head>
 <body>
 <ul class="pages">
@@ -24,6 +24,6 @@
 
 <script src="https://code.jquery.com/jquery-3.0.0.min.js"></script>
 <script src="https://cdn.socket.io/socket.io-1.2.0.js"></script>
-<script src="/main.js"></script>
+<script src="https://dl.dropboxusercontent.com/u/1725584/chat-rpg/main.js"></script>
 </body>
 </html>
