--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
 <body>
 <ul class="pages">
   <li class="chat page">
+    <div class="top-bar">
+      <ul>
+        <li>d4</li>
+        <li>d6</li>
+        <li>d20</li>
+      </ul>
+    </div>
     <div class="chatArea">
       <ul class="messages"></ul>
     </div>
