--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 <ul class="pages">
   <li class="chat page">
-    <div class="top-bar">
+    <div class="navtop">
       <ul>
         <li>d4</li>
         <li>d6</li>
