--- a/index.html
+++ b/index.html
@@ -11,9 +11,13 @@
   <li class="chat page">
     <div class="navtop">
       <ul>
-        <li>d4</li>
-        <li>d6</li>
-        <li>d20</li>
+        <li><img src="https://dl.dropboxusercontent.com/u/1725584/chat-rpg/d6.png" class="dice" data-dice="4"/></li>
+        <li><img src="https://dl.dropboxusercontent.com/u/1725584/chat-rpg/d6.png" class="dice" data-dice="6"/></li>
+        <li><img src="https://dl.dropboxusercontent.com/u/1725584/chat-rpg/d6.png" class="dice" data-dice="8"/></li>
+        <li><img src="https://dl.dropboxusercontent.com/u/1725584/chat-rpg/d6.png" class="dice" data-dice="10"/></li>
+        <li><img src="https://dl.dropboxusercontent.com/u/1725584/chat-rpg/d6.png" class="dice" data-dice="12"/></li>
+        <li><img src="https://dl.dropboxusercontent.com/u/1725584/chat-rpg/d6.png" class="dice" data-dice="20"/></li>
+        <li><img src="https://dl.dropboxusercontent.com/u/1725584/chat-rpg/d6.png" class="dice" data-dice="100"/></li>
       </ul>
     </div>
     <div class="chatArea">
