--- a/index.html
+++ b/index.html
@@ -32,9 +32,14 @@
     </div>
   </li>
 </ul>
-
 <script src="https://code.jquery.com/jquery-3.0.0.min.js"></script>
 <script src="https://cdn.socket.io/socket.io-1.2.0.js"></script>
 <script src="https://dl.dropboxusercontent.com/u/1725584/chat-rpg/main.js"></script>
+<script>
+  $('.dice').click(function(){
+    socket.emit('roll dice', $(this).data('dice'));
+    return false;
+  });
+</script>
 </body>
 </html>
