--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
 <script src="https://cdn.socket.io/socket.io-1.2.0.js"></script>
 <script src="https://dl.dropboxusercontent.com/u/1725584/chat-rpg/main.js"></script>
 <script>
+  var socket = io();
+
   $('.dice').click(function(){
     socket.emit('roll dice', $(this).data('dice'));
     return false;
