--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
   var socket = io();
 
   $('.dice').click(function(){
+    console.log($(this).data('dice'));
     socket.emit('roll dice', $(this).data('dice'));
     return false;
   });
